# ny-tree-census

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile_dev_env  README.md  build.sh  build_base.sh  build_dev_env.sh  build_packages.sh  build_runner.sh  build_shiny_server.sh  code-server.sh  compose.yaml  jupyter.sh  nginx.conf  pyproject.toml  remove_runner.sh  requirements.txt  shiny-server.conf  start.sh  start_code-server.sh  start_jupyter.sh  start_runner.sh  start_stack.sh  stop_stack.sh
.code-server/: extensions.txt  machine_settings.json  user_settings.json
.github/workflows/: static.yml  test_and_lint.yaml
.vscode_config/: vscode_extensions.txt
docs/: README.md  ci_cd_gh_actions.md  data_description.md  development_environment.md
gh_actions_runner/: .dockerignore  Dockerfile  build_runner.sh  remove_runner.sh  start_runner.sh
gh_pages/: index.html
notebooks/exploratory/: eda.ipynb
reports/: README.md
src/: __init__.py
src/dashboards/: app.py
src/data/: get_data.py
src/logs/: logs.py
src/visualization/: __init__.py  visualize.py
website/: _quarto.yml  about.qmd  eda.qmd  index.qmd
website/_site/: about.html  index.html  search.json
website/_site/site_libs/bootstrap/: bootstrap.min.css
website/index_files/libs/bootstrap/: bootstrap.min.css
