[tool.poetry]
name = "src"
version = "0.1.0"
description = "Проект с исследование данных датасета 2015 Street Tree Census - Tree Data"
authors = ["Aleksei Bogachev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
numpy = "^1"
python = "^3.11"
pandas = "^1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
click = "^8.1.7"
notebook = "^6"
dvc = {extras = ["gdrive"], version = "^3.47.0"}
python-dotenv = "^1.0.1"
kaggle = "^1.6.6"
missingno = "^0.5.2"
geopandas = "^0.14.4"
plotly = "^5.22.0"
dash = "^2.17.0"
ipywidgets = "^8.1.2"
kaleido = "0.2.1"
plotly-geo = "^1.0.0"
statsmodels = "^0.14.2"
shiny = "^0.10.2"
shinywidgets = "^0.3.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pandas-stubs = "^2.2.0.240218"
types-seaborn = "^0.13.2.20240311"
ruff = "^0.3.5"
nbqa = "^1.8.5"
pre-commit = "^3.7.0"
types-requests = "^2.31.0.20240406"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = ["references/*"]
indent-width = 4
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["D", "E", "F", "I", "W"]
ignore = ["D301", "E731"]
fixable = ["F401", "I001", "W291", "W292", "W293"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "catboost",
    "dash",
    "joblib",
    "missingno",
    "plotly",
    "sklearn",
    "sklearn.metrics",
    "sklearn.model_selection"
]
ignore_missing_imports = true